--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Depends:
     R (>= 3.1.0)
 LazyData: true
 ByteCompile: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0
 License: MIT + file LICENSE
 URL: https://github.com/mkearney/funique
 BugReports: https://github.com/mkearney/funique/issues
+Suggests: 
+    testthat
