--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,11 @@
+url: https://funique.mikewk.com/
+
+template:
+  ganalytics: "UA-64959413-1"
+
+authors:
+  Michael Wayne Kearney:
+    href: https://mikewk.com
 navbar:
   right:
   - icon: fa-github fa-lg
