--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: 2.2.2.1
 pkgdown: 1.1.0.9000
 pkgdown_sha: ~
 articles: []
+urls:
+  reference: https://funique.mikewk.com//reference
+  article: https://funique.mikewk.com//articles
 
